--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+us <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Lorem Ipsum</title>
+    <title>je vous vois hein ?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>lorem ipsum</h1>
+        <h1>sortez tout de suite de ma chambre.</h1>
     </div>
 </body>
 </html>
